fixing z-index for input card

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,7 @@
     position: relative;
   }
   .bgImage {
-    z-index: -1;
+    z-index: 0;
   }
   .inputCard {
     padding-top: 16rem;
@@ -212,7 +212,8 @@
     width: 44.1rem;
     border-radius: 0.5rem;
     overflow: visible;
-    z-index: 3;
+    z-index: 1;
+    position: relative;
   }
   .welcome {
     color: #484848;
@@ -259,5 +260,4 @@
   background-color: white;
   color: #484848;
   min-height: calc(100vh - 17rem);
-  z-index: -1;
 }
